@@ -1,4 +1,4 @@
-/* RCSid $Id: pmapray.h,v 2.5 2016/05/17 17:39:47 rschregle Exp $ */
+/* RCSid $Id: pmapray.h,v 2.6 2016/11/02 22:09:14 greg Exp $ */
 
 /* 
    ==================================================================
@@ -10,7 +10,7 @@
    supported by the Swiss National Science Foundation (SNSF, #147053)
    ==================================================================   
    
-   $Id: pmapray.h,v 2.5 2016/05/17 17:39:47 rschregle Exp $
+   $Id: pmapray.h,v 2.6 2016/11/02 22:09:14 greg Exp $
 */
 
 
@@ -28,3 +28,6 @@ void ray_save_pmap (RAYPARAMS *rp);
 
 void ray_restore_pmap (RAYPARAMS *rp);
 /* Interface to ray_restore(); restore photon mapping params */
+
+void ray_defaults_pmap (RAYPARAMS *rp);
+/* Interface to ray_defaults(); set photon mapping defaults */
